--- a/README.Rmd
+++ b/README.Rmd
@@ -96,7 +96,7 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
 
     ```{bash eval=FALSE}
     # create a conda environment named lostruct_lcpipe and install R and some key R packages
-    mamba env create -c conda-forge -f $SOFTWARE_DIR/loco-pipe/workflow/envs/pcangsd.yaml
+    mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/lostruct.yaml
     # activate the lostruct conda environment
     conda activate lostruct_lcpipe
     # launch R
@@ -108,6 +108,13 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
     # deactivate the conda environment
     conda deactivate  
     ```
+
+Note: depending on your system, you may need to ensure that lostruct is properly installed to the `lostruct_lcpipe` environment with something like 
+
+```{r eval=FALSE}
+withr::with_libpaths(new = "/some/path/miniconda3/envs/lostruct_lcpipe/lib/R/library",
+                     devtools::install_github("petrelharp/local_pca/lostruct"))
+```
 
 ## Preparing the project directory and required input files
 
