--- a/toyfish.Rmd
+++ b/toyfish.Rmd
@@ -52,7 +52,7 @@ Raw sequencing data were generated from an Illumina Novaseq sequencer, and we pe
 
     ```{bash eval=FALSE}
     # create a conda environment named lostruct_lcpipe and install R and some key R packages
-    mamba env create -c conda-forge -f $SOFTWARE_DIR/loco-pipe/workflow/envs/pcangsd.yaml
+    mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/lostruct.yaml
     # activate the lostruct conda environment
     conda activate lostruct_lcpipe
     # launch R
@@ -64,6 +64,13 @@ Raw sequencing data were generated from an Illumina Novaseq sequencer, and we pe
     # deactivate the conda environment
     conda deactivate  
     ```
+
+Note: depending on your system, you may need to ensure that lostruct is properly installed to the `lostruct_lcpipe` environment with something like 
+
+```{r eval=FALSE}
+withr::with_libpaths(new = "/some/path/miniconda3/envs/lostruct_lcpipe/lib/R/library",
+                     devtools::install_github("petrelharp/local_pca/lostruct"))
+```
 
 ## Preparing the project directory and required input files
 
