--- a/README.Rmd
+++ b/README.Rmd
@@ -109,12 +109,12 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
     conda deactivate  
     ```
 
-Note: depending on your system, you may need to ensure that lostruct is properly installed to the `lostruct_lcpipe` environment with something like 
-
-```{r eval=FALSE}
-withr::with_libpaths(new = "/some/path/miniconda3/envs/lostruct_lcpipe/lib/R/library",
-                     devtools::install_github("petrelharp/local_pca/lostruct"))
-```
+    Note: depending on your system, you may need to ensure that lostruct is properly installed to the `lostruct_lcpipe` environment with something like the following 
+    
+    ```{r eval=FALSE}
+    withr::with_libpaths(new = "/path/to/conda/envs/lostruct_lcpipe/lib/R/library",
+                         devtools::install_github("petrelharp/local_pca/lostruct"))
+    ```
 
 ## Preparing the project directory and required input files
 
