--- a/toyfish.Rmd
+++ b/toyfish.Rmd
@@ -65,12 +65,12 @@ Raw sequencing data were generated from an Illumina Novaseq sequencer, and we pe
     conda deactivate  
     ```
 
-Note: depending on your system, you may need to ensure that lostruct is properly installed to the `lostruct_lcpipe` environment with something like 
-
-```{r eval=FALSE}
-withr::with_libpaths(new = "/some/path/miniconda3/envs/lostruct_lcpipe/lib/R/library",
-                     devtools::install_github("petrelharp/local_pca/lostruct"))
-```
+    Note: depending on your system, you may need to ensure that lostruct is properly installed to the `lostruct_lcpipe` environment with something like the following 
+    
+    ```{r eval=FALSE}
+    withr::with_libpaths(new = "/path/to/conda/envs/lostruct_lcpipe/lib/R/library",
+                         devtools::install_github("petrelharp/local_pca/lostruct"))
+    ```
 
 ## Preparing the project directory and required input files
 
