--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Pipeline flowchart
 
 ![](updated_locopipe.jpeg)
-
+Each box here represents an analytical step in the form of a Snakemake rule, and the boxes are colored by the major groups of analyses in the form of separate Snakefiles, which are stored in `workflow/rules`.
+ 
 ## Before you start
 
 #### Reference genome
