--- a/README.Rmd
+++ b/README.Rmd
@@ -41,9 +41,12 @@ knitr::opts_chunk$set(echo = TRUE)
 * Heterozygosity estimation
 * Local PCA analysis
 
-## Pipeline flowchart
+![](simplified_flowchart.png)
+A simplified flowchart of loco-pipe highlighting its key functionalities. Each box represents an analytical step in the pipeline, and plots are generated using our toy dataset. Please see the [toy dataset page](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md) for detailed descriptions of the plots.
 
-![](updated_locopipe.jpeg)
+## Complete pipeline flowchart
+
+![](complete_flowchart.jpeg)
 Each box here represents an analytical step in the form of a Snakemake rule, and the boxes are colored by the major groups of analyses in the form of separate Snakefiles, which are stored in `workflow/rules`.
  
 ## Before you start
@@ -68,7 +71,7 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
 
 1. Install [mamba](https://mamba.readthedocs.io/en/latest/installation/mamba-installation.html) or conda (https://docs.conda.io/projects/conda/en/stable/user-guide/install/index.html) if you have not already done so. A fresh install of mamba with miniforge (https://github.com/conda-forge/miniforge) is highly recommended because mamba is much faster than conda. It is ok if you prefer to use conda though; just replace all occurrences of `mamba` with `conda` in the code below.
 
-2. Download `loco-pipe` from GitHub (e.g. using `git clone`). We recommend you to download it to a folder where you store your software programs. We will refer to the full path of the directory that contains the `loco-pipe` folder as `SOFTWARE_DIR`.
+2. Download `loco-pipe` from GitHub (e.g. using `git clone https://github.com/sudmantlab/loco-pipe.git`). We recommend you to download it to a folder where you store your software programs. We will refer to the full path of the directory that contains the `loco-pipe` folder as `SOFTWARE_DIR`.
 
 3. Create the `loco-pipe` conda environment using mamba by running `mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/loco-pipe.yaml` (replace $SOFTWARE_DIR with a real path).
 
@@ -155,9 +158,9 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
 
 3. Edit the configuration files.
 
-    * The pipeline config file `config.yaml`: This config file serves as an easily accessible way to control the behavior of loco-pipe. You can use it to 1) specify the location of input files, 2) include or exclude certain analyses from a loco-pipe run, 3) adjust the parameter settings for different analyses. This config file is thoroughly annotated, so please read it through and make edits when needed. **Importantly**, please copy `config.yaml` to the `config` folder in your project directory (i.e. `cp $SOFTWARE_DIR/loco-pipe/config.yaml $BASEDIR/config/config.yaml`) and make your edits there rather in the `loco-pipe` directory. 
+    * The [pipeline config file](https://github.com/sudmantlab/loco-pipe/blob/main/config.yaml) `config.yaml`: This config file serves as an easily accessible way to control the behavior of loco-pipe. You can use it to 1) specify the location of input files, 2) include or exclude certain analyses from a loco-pipe run, 3) adjust the parameter settings for different analyses. This config file is thoroughly annotated, so please read it through and make edits when needed. **Importantly**, please copy `config.yaml` to the `config` folder in your project directory (i.e. `cp $SOFTWARE_DIR/loco-pipe/config.yaml $BASEDIR/config/config.yaml`) and make your edits there rather in the `loco-pipe` directory. 
     
-    * (Optional) The cluster config file `cluster_config.yaml` under `workflow/profiles`: This config files specifies the resources each step of the pipeline can use on a computer cluster. We have extensively tested loco-pipe with a slurm job scheduler and an example slurm profile is included in loco-pipe (`workflow/profiles/slurm`), but other job schedulers should also work with Snakemake given an appropriate profile setup (see [Snakemake manual](https://snakemake.readthedocs.io/en/stable/executing/cli.html#profiles) for details).
+    * (Optional) The [cluster config file](https://github.com/sudmantlab/loco-pipe/blob/main/workflow/profiles/slurm/cluster_config.yaml) `cluster_config.yaml` under `workflow/profiles`: This config files specifies the resources each step of the pipeline can use on a computer cluster. We have extensively tested loco-pipe with a slurm job scheduler and an example slurm profile is included in loco-pipe (`workflow/profiles/slurm`), but other job schedulers should also work with Snakemake given an appropriate profile setup (see [Snakemake manual](https://snakemake.readthedocs.io/en/stable/executing/cli.html#profiles) for details).
 
 ## Launching the pipeline
 
@@ -179,6 +182,6 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
 
 ## Future directions
 
-We plan to improve the functionality of loco-pipe, by incorporating additional analyses (e.g. GWAS, dxy, LD estimation and pruning) into this pipeline and also enabling more functionalities for the existing software programs (e.g. ANGSD, Ohana). In terms of variety, we also hope to provide more software options for users to pick for certain analysis (e.g. winSFS for SFS estimation, ngsAdmix for admixture analysis).
+We plan to continue to maintain and develop loco-pipe, by incorporating additional analyses (e.g. GWAS, dxy, LD estimation and pruning) into this pipeline and also enabling more functionalities for the existing software programs (e.g. ANGSD, Ohana). In terms of variety, we also hope to provide more software options for users to pick for certain analysis (e.g. winSFS for SFS estimation, ngsAdmix for admixture analysis).
 
 All kinds of feedback, such as bug reports and feature requests, are welcome on the [Issues](https://github.com/sudmantlab/loco-pipe/issues) page. We also encourage users to build on the existing infrastructure and add more functionalities to loco-pipe in the form of [pull requests](https://github.com/sudmantlab/loco-pipe/pulls).
