--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
 * Incorporation of key filtering steps and best practices for low-coverage data
 * Key results are plotted automatically for visual inspection
 * Easy customization through a configuration file
-* Detailed tutorial with a [toy dataset](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md) and extensive in-line annotation
+* [A quick start guide with an example dataset](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md), and extensive in-line annotation
 * Flexible architecture that allows for the addition of new features
 * Inheritance of the many benefits offered by Snakemake, including
     * High computational efficiency achieved through massive parallelization 
@@ -42,7 +42,7 @@ knitr::opts_chunk$set(echo = TRUE)
 * Local PCA analysis
 
 ![](simplified_flowchart.png)
-A simplified flowchart of loco-pipe highlighting its key functionalities. Each box represents an analytical step in the pipeline, and plots are generated using our toy dataset. Please see the [toy dataset page](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md) for detailed descriptions of the plots.
+A simplified flowchart of loco-pipe highlighting its key functionalities. The box in dotted lines represents user-provided input files, and boxes in solid lines represent key analytical steps in the pipeline. Plots are generated using our example dataset. Please see our [quick start guide](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md) for detailed descriptions of the plots.
 
 ## Complete pipeline flowchart
 
@@ -63,9 +63,9 @@ In addition, we assume that properly mapped and filtered bam files are ready to 
 
 grenepipe is a Snakemake pipeline for variant calling from raw sequence data. Although it is developed for high-coverage data, you can skip the variant calling step by using the `all_qc` [shortcut](https://github.com/moiexpositoalonsolab/grenepipe/wiki/Advanced-Usage#running-only-parts-of-the-pipeline) and turning the `bcftools-stats` switch in the config file to `false`. This way, grenepipe will stop after generating the final bam files and their associated quality reports. (We also recommend turning the `clip-read-overlaps` switch to `true` and setting `VALIDATION_STRINGENCY=SILENT` for `picard MarkDuplicates` in the configuration file.) grenepipe is very thoughtfully built and [extensively documented](https://github.com/moiexpositoalonsolab/grenepipe/wiki), and it is a major inspiration for loco-pipe. Familiarizing yourself with grenepipe will also make loco-pipe much easier to learn.
 
-#### Toy dataset
+#### Quick start guide with an example dataset
 
-If you don't yet have your data ready for loco-pipe, and even if you do, we highly recommend you to first test loco-pipe with a heavily subsetted toy dataset that we provide: [toyfish](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md). It only takes loco-pipe a few minutes to analyse the toy dataset on a computer cluster, making it much easier to learn and troubleshoot.
+If you don't yet have your data ready for loco-pipe, and even if you do, we highly recommend you to first follow our [quick start guide](https://github.com/sudmantlab/loco-pipe/blob/main/toyfish.md) which includes a heavily subsetted example dataset. It only takes loco-pipe a few minutes to analyse the example dataset on a computer cluster, making it much easier to learn and troubleshoot.
 
 ## Setting up the pipeline
 
@@ -145,7 +145,7 @@ If you don't yet have your data ready for loco-pipe, and even if you do, we high
             * In practice, you may need to have multiple versions of the sample table. For example, you may include all samples in the first run, exclude some problematic one and/or change the grouping of others based on the result of the first run, and launch the pipeline again with an updated sample table. 
             * In case that you don't have any grouping information a priori, you still need to have a fake grouping column with all samples having the same entry for plotting purposes (e.g. PCA and admixture). In this case, you will also need to turn off all population-level analyses in the configuration file (see below).
         
-    * Chromosome table: This table should contain one or two **unnamed** columns. The first column is required, and it records the names of all chromosomes/scaffolds/contigs that you would like to include in the analysis. These should exactly match the names in the reference genome. The second column is optional, and it records shortened or alternative names of the chromosomes/scaffolds/contigs which you would like to show on the plots. If the second column is empty, the original names will be shown. Below is an example of a chromosome table.
+    * Chromosome table: This table should contain one or two columns. These columns should be **unnamed**. The first column is required, and it records the names of all chromosomes/scaffolds/contigs that you would like to include in the analysis. These should exactly match the names in the reference genome. The second column is optional, and it records shortened or alternative names of the chromosomes/scaffolds/contigs which you would like to show on the plots. If the second column is empty, the original names will be shown. Below is an example of a chromosome table.
     
         ```{r echo=FALSE, message=FALSE}
         library(tidyverse)
