--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ A simplified flowchart of loco-pipe highlighting its key functionalities. The bo
 
 ## Complete pipeline flowchart
 
-![](complete_flowchart.jpeg)
+![](updated_flowchart.jpeg)
 Each box here represents an analytical step in the form of a Snakemake rule, and the boxes are colored by the major groups of analyses in the form of separate Snakefiles, which are stored in `workflow/rules`.
  
 ## Before you start
