--- a/toyfish.Rmd
+++ b/toyfish.Rmd
@@ -27,28 +27,7 @@ Raw sequencing data were generated from an Illumina Novaseq sequencer, and we pe
 
 3. Create the `loco-pipe` conda environment using mamba by running `mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/loco-pipe.yaml` (replace $SOFTWARE_DIR with a real path).
 
-4. (Optional) If you would like to run PCA with the software [PCAngsd](https://github.com/Rosemeis/pcangsd) using loco-pipe, you **must** install PCAngsd manually as it is not yet available on conda. Please install it to a conda environment named `pcangsd_lcpipe` using the script below. Even if you already have PCAngsd installed on your machine, you will need to run the following code to ensure that the version is compatible.
-
-    ```{bash eval=FALSE}
-    # first set your working directory to a folder where you store your software programs
-    cd $SOFTWARE_DIR # replace $SOFTWARE_DIR with a real path
-    # download PCAngsd from Github
-    git clone https://github.com/Rosemeis/pcangsd.git
-    cd pcangsd
-    # check out the version the loco-pipe is based on
-    git checkout f90d41f7b9b245481781ae319c4a174376e5f471
-    # create an environment for PCAngsd 
-    mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/pcangsd.yaml
-    # activate the conda environment
-    conda activate pcangsd_lcpipe
-    # build PCAngsd
-    python setup.py build_ext --inplace  
-    pip3 install -e .
-    # deactivate the conda environment
-    conda deactivate  
-    ```
-
-5. (Optional) If you would like to run local PCA with the [lostruct](https://github.com/petrelharp/local_pca) package in R using loco-pipe, you **must** install lostruct (in addition to PCAngsd, see above) manually as it is not yet available on conda. Please install it to a conda environment named `lostruct_lcpipe` using the script below.
+4. (Optional) If you would like to run local PCA with the [lostruct](https://github.com/petrelharp/local_pca) package in R using loco-pipe, you **must** install lostruct manually as it is not yet available on conda. Please install it to a conda environment named `lostruct_lcpipe` using the script below.
 
     ```{bash eval=FALSE}
     # create a conda environment named lostruct_lcpipe and install R and some key R packages
