--- a/manual/README.Rmd
+++ b/manual/README.Rmd
@@ -101,9 +101,9 @@ Although we anticipate that the current setup of loco-pipe is sufficient for mos
 The current version of loco-pipe allows users to apply simple depth and missingness filters, but some users might find it useful to apply additional filters, e.g. to ensure the evenness of coverage across populations, or to remove problematic SNP calls caused by paralogous sequences or misalignment (see [Dallaire et al. 2024](https://academic.oup.com/gbe/article/15/12/evad229/7470724) for details). Ultimately, the optimal filtering approaches vary from project to project, so we decided to not directly implement any specific advanced filtering methods in the current version of loco-pipe. However, we note that it is relatively straightforward to manually incorporate these filters to loco-pipe thanks to its modular nature. The key idea is to run part of the pipeline with the default filters, perform some advanced filtering procedures manually, and rerun part of the pipeline with the updated SNP/site list. We provide instructions on two of these filtering procedures below.
 
 
-* "Deviant" SNP filter: As described in [Dallaire et al. 2024](https://academic.oup.com/gbe/article/15/12/evad229/7470724), deviant SNPs refers to those SNPs that do not conform to expected patterns of heterozygosity and allelic ratio for nonduplicated loci. In the paper, the authors recommended a workflow to filter out these deviant SNPs. To implement this method with loco-pipe, users can first run the pipeline until the `snp_calling_global` step (this can be done by only turning the `snp_calling_global` switch on in the config file to “TRUE” and other switches to “FALSE”). With output from `snp_calling_global`, users will be able to follow the recommended workflow to identify the deviant SNPs. Next, they could generate a new SNP list excluding the deviant SNPs in ANGSD format and index it with ANGSD. They can then use the `-site` flag to restrict another round of SNP calling on this new SNP list (this can be done with the `extra` flag in the config file or by directly editing the `snp_calling_global` rule), rename the existing `angsd/snp_calling_global` directory to something else, and relaunch the pipeline. This way, the pipeline will perform SNP calling again, but this time only at sites included in the updated SNP list, and generate output files (e.g. genotype likelihoods) that do not include any deviant SNPs that can be used for downstream analyses.
+* "Deviant" SNP filter: As described in [Dallaire et al. 2024](https://academic.oup.com/gbe/article/15/12/evad229/7470724), deviant SNPs refers to those SNPs that do not conform to expected patterns of heterozygosity and allelic ratio for nonduplicated loci. In the paper, the authors recommended a workflow to filter out these deviant SNPs. To implement this method with loco-pipe, users can first run the pipeline until the `snp_calling_global` step (this can be done by only turning the `snp_calling_global` switch on in the config file to “TRUE” and other switches to “FALSE”). With output from `snp_calling_global`, users will be able to follow the recommended workflow to identify the deviant SNPs. Next, they could generate a new SNP list excluding the deviant SNPs in ANGSD format and index it with ANGSD. They can then use the `-sites` flag to restrict another round of SNP calling on this new SNP list (this can be done with the `extra` flag in the config file or by directly editing the `snp_calling_global` rule), rename the existing `angsd/snp_calling_global` directory to something else, and relaunch the pipeline. This way, the pipeline will perform SNP calling again, but this time only at sites included in the updated SNP list, and generate output files (e.g. genotype likelihoods) that do not include any deviant SNPs that can be used for downstream analyses.
 
-* Evenness of coverage across samples and populations: In general, users should be aware of potential issues associated with uneven read depth across samples, and uneven sample sizes across different populations. Results from samples with very low read depth or populations with low sample sizes should be interpreted with caution. Therefore, we recommend users to always check the depth distribution and missingness in each sample and each population, which are outputted from the `snp_calling_global`, `get_maf`, and `get_theta` rules. Oftentimes, it may be warranted to run part of the pipeline with all samples included, summarize their read depth and missingness, exclude individuals or populations with extremely low sample size / read depth from the metadata table, and relaunch the pipeline. Additionally, it can sometimes be helpful to narrow down the global SNP list based to ensure even coverage across populations. To achieve this, users can run the pipeline until `get_maf` and `get_theta`, and manually generate a SNP/site list by intersecting the SNPs that pass a certain population-level missingness threshold. Similar to the previous example, they can then index this SNP/site list, input it to `snp_calling_global` and `get_theta` with the `-site` flag, rename the existing `snp_calling_global` and `get_theta` folders, and relaunch the pipeline. 
+* Evenness of coverage across samples and populations: In general, users should be aware of potential issues associated with uneven read depth across samples, and uneven sample sizes across different populations. Results from samples with very low read depth or populations with low sample sizes should be interpreted with caution. Therefore, we recommend users to always check the depth distribution and missingness in each sample and each population, which are outputted from the `snp_calling_global`, `get_maf`, and `get_theta` rules. Oftentimes, it may be warranted to run part of the pipeline with all samples included, summarize their read depth and missingness, exclude individuals or populations with extremely low sample size / read depth from the metadata table, and relaunch the pipeline. Additionally, it can sometimes be helpful to narrow down the global SNP list based to ensure even coverage across populations. To achieve this, users can run the pipeline until `get_maf` and `get_theta`, and manually generate a SNP/site list by intersecting the SNPs that pass a certain population-level missingness threshold. Similar to the previous example, they can then index this SNP/site list, input it to `snp_calling_global` and `get_theta` with the `-sites` flag, rename the existing `snp_calling_global` and `get_theta` folders, and relaunch the pipeline. 
 
 ###### Tweaking what analyses to run
 
